--- a/Titanic_Deep_Dive._Practice.ipynb
+++ b/Titanic_Deep_Dive._Practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "id": "fd3361a8",
    "metadata": {},
    "outputs": [
@@ -77,29 +77,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23236cc8",
+   "id": "b292ac91",
    "metadata": {},
    "source": [
-    "💻 제1유형 연습 문제\n",
-    "\n",
-    "문제 1. (결측값 채우기 - 고급) Age 컬럼의 결측값(NaN)이 많습니다. 이 결측값을 **Pclass (객실 등급) 별 Age의 중앙값(median)**으로 채워 넣으려고 합니다. (예: 1등석(Pclass=1) 승객의 Age 결측값은 1등석 승객 전체의 Age 중앙값으로 채움) 결측값을 모두 채운 후, Age 컬럼의 전체 평균값을 구하시오. (단, 소수점 셋째 자리에서 반올림하여 둘째 자리까지 계산)\n",
-    "\n",
-    "문제 2. (문자열 추출 - Regex) Name 컬럼에는 승객의 호칭(Title)이 포함되어 있습니다. (예: Mr., Mrs., Miss., Master. 등) Name 컬럼에서 **정규표현식(Regex)**을 사용하여 이 호칭([A-Za-z]+\\.)을 추출하여 'Title'이라는 새 컬럼을 만드시오. 그 후, 'Title'별 인원수를 집계할 때, 10명 이상의 인원을 가진 'Title' 그룹들의 Age 평균을 구하시오. (단, 소수점 셋째 자리에서 반올림하여 둘째 자리까지 계산)\n",
-    "\n",
-    "문제 3. (결측값 + 문자열 처리 - 복합) Cabin 컬럼은 결측값이 매우 많습니다.\n",
-    "\n",
-    "Cabin 컬럼의 결측값은 'Unknown'으로 채웁니다.\n",
-    "\n",
-    "Cabin 컬럼이 결측값이 아닌 경우, 값의 **첫 번째 알파벳(Deck)**만 추출합니다. (예: C85 -> C, G6 -> G)\n",
-    "\n",
-    "Unknown으로 채워진 데이터는 Deck를 'U'로 변경합니다. (힌트: fillna('U') 후 .str[0])\n",
-    "\n",
-    "이렇게 생성된 Deck 컬럼(A, B, C... U)별 Survived (생존율) 평균을 계산할 때, 생존율이 가장 높았던 Deck의 이름을 출력하시오."
+    "💻 문제 1. (결측값 채우기 - 고급) Age 컬럼의 결측값(NaN)이 많습니다. 이 결측값을 **Pclass (객실 등급) 별 Age의 중앙값(median)**으로 채워 넣으려고 합니다. (예: 1등석(Pclass=1) 승객의 Age 결측값은 1등석 승객 전체의 Age 중앙값으로 채움) 결측값을 모두 채운 후, Age 컬럼의 전체 평균값을 구하시오. (단, 소수점 셋째 자리에서 반올림하여 둘째 자리까지 계산)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "id": "2cea89e2",
    "metadata": {},
    "outputs": [
@@ -107,7 +93,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "29.07\n"
+      "29.07\n",
+      "0      24.0\n",
+      "1      37.0\n",
+      "2      24.0\n",
+      "3      37.0\n",
+      "4      24.0\n",
+      "       ... \n",
+      "886    29.0\n",
+      "887    37.0\n",
+      "888    24.0\n",
+      "889    37.0\n",
+      "890    24.0\n",
+      "Name: Age, Length: 891, dtype: float64\n"
      ]
     }
    ],
@@ -119,12 +117,13 @@
     "df['Age'] = df['Age'].fillna(age_fill_values)\n",
     "\n",
     "result = df['Age'].mean()\n",
-    "print(round(result, 2))\n"
+    "print(round(result, 2))\n",
+    "print(age_fill_values)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "id": "f765d845",
    "metadata": {},
    "outputs": [
@@ -172,8 +171,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8e7f361e",
+   "metadata": {},
+   "source": [
+    "💻 문제 2. (문자열 추출 - Regex) Name 컬럼에는 승객의 호칭(Title)이 포함되어 있습니다. (예: Mr., Mrs., Miss., Master. 등) Name 컬럼에서 **정규표현식(Regex)**을 사용하여 이 호칭([A-Za-z]+\\.)을 추출하여 'Title'이라는 새 컬럼을 만드시오. 그 후, 'Title'별 인원수를 집계할 때, 10명 이상의 인원을 가진 'Title' 그룹들의 Age 평균을 구하시오. (단, 소수점 셋째 자리에서 반올림하여 둘째 자리까지 계산)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "id": "0fc74717",
    "metadata": {},
    "outputs": [
@@ -195,6 +202,356 @@
     "result = target_df['Age'].mean()\n",
     "print(round(result, 2))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3856a880",
+   "metadata": {},
+   "source": [
+    "💻 문제 3. (결측값 + 문자열 처리 - 복합) Cabin 컬럼은 결측값이 매우 많습니다.\n",
+    "\n",
+    "Cabin 컬럼의 결측값은 'Unknown'으로 채웁니다.\n",
+    "\n",
+    "Cabin 컬럼이 결측값이 아닌 경우, 값의 **첫 번째 알파벳(Deck)**만 추출합니다. (예: C85 -> C, G6 -> G)\n",
+    "\n",
+    "Unknown으로 채워진 데이터는 Deck를 'U'로 변경합니다. (힌트: fillna('U') 후 .str[0])\n",
+    "\n",
+    "이렇게 생성된 Deck 컬럼(A, B, C... U)별 Survived (생존율) 평균을 계산할 때, 생존율이 가장 높았던 Deck의 이름을 출력하시오."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "e3977ca8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cabin\n",
+      "A    0.466667\n",
+      "B    0.744681\n",
+      "C    0.593220\n",
+      "D    0.757576\n",
+      "E    0.750000\n",
+      "F    0.615385\n",
+      "G    0.500000\n",
+      "T    0.000000\n",
+      "U    0.299854\n",
+      "Name: Survived, dtype: float64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sangh\\AppData\\Local\\Temp\\ipykernel_21652\\403286857.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  q1['Cabin'] = deck\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3번 문제\n",
+    "df['Cabin'] = df['Cabin'].fillna('Unknown')\n",
+    "#print(df['Cabin'].head(10))\n",
+    "\n",
+    "q1 = df[['Cabin', 'Survived']]\n",
+    "\n",
+    "deck = q1['Cabin'].str[0]\n",
+    "q1['Cabin'] = deck\n",
+    "\n",
+    "survived_rates = q1.groupby('Cabin')['Survived'].mean()\n",
+    "print(survived_rates)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "6a449996",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deck\n",
+      "A    0.466667\n",
+      "B    0.744681\n",
+      "C    0.593220\n",
+      "D    0.757576\n",
+      "E    0.750000\n",
+      "F    0.615385\n",
+      "G    0.500000\n",
+      "T    0.000000\n",
+      "U    0.299854\n",
+      "Name: Survived, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3번 문제 완성 코드\n",
+    "df['Deck'] = df['Cabin'].fillna('U').str[0]\n",
+    "\n",
+    "deck_survival_rates = df.groupby('Deck')['Survived'].mean()\n",
+    "\n",
+    "print(deck_survival_rates)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "000c1dd9",
+   "metadata": {},
+   "source": [
+    "🚀 핵심: Survived 컬럼 (0과 1로만 구성)의 .mean()을 구하면, 그게 바로 1의 비율, 즉 생존율이 된다. (예: [1, 0, 1]의 평균은 0.66 -> 66%)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98888555",
+   "metadata": {},
+   "source": [
+    "💻 문제 4. (Feature 생성 및 Categorization) SibSp (형제/배우자)와 Parch (부모/자녀) 컬럼을 합쳐, 본인을 포함한 'FamilySize' (가족 총원 = SibSp + Parch + 1) 컬럼을 생성합니다. 이 'FamilySize'를 기준으로 다음과 같이 'FamilyGroup'을 분류합니다.\n",
+    "\n",
+    "1명: 'Alone'\n",
+    "\n",
+    "2~4명: 'Small'\n",
+    "\n",
+    "5명 이상: 'Large' \n",
+    "\n",
+    "'FamilyGroup'별 Survived (생존율) 평균을 계산하고, 생존율이 가장 높았던 그룹의 이름을 출력하시오."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "05905710",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FamilyGroup\n",
+      "Alone    0.303538\n",
+      "Large    0.161290\n",
+      "Small    0.578767\n",
+      "Name: Survived, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4번 문제\n",
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/datasciencedojo/datasets/master/titanic.csv\")\n",
+    "\n",
+    "df['FamilySize'] = df['SibSp'] + df['Parch'] + 1\n",
+    "\n",
+    "df['FamilyGroup'] = 'Unknown'\n",
+    "\n",
+    "df.loc[df['FamilySize']==1, 'FamilyGroup'] = 'Alone'\n",
+    "df.loc[(df['FamilySize'] >= 2) & (df['FamilySize'] <= 4), 'FamilyGroup'] = 'Small'\n",
+    "df.loc[df['FamilySize']>=5, 'FamilyGroup'] = 'Large'\n",
+    "\n",
+    "result = df.groupby('FamilyGroup')['Survived'].mean()\n",
+    "print(result)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36def6a8",
+   "metadata": {},
+   "source": [
+    "💻 문제 5. (복합 조건 apply 및 Feature 생성) Age 컬럼 (결측값이 10번 문제 방식으로 채워졌다고 가정)과 Sex 컬럼을 조합하여 'AgeSexGroup'을 만듭니다.\n",
+    "\n",
+    "'male'이면서 18세 미만: 'Boy'\n",
+    "\n",
+    "'female'이면서 18세 미만: 'Girl'\n",
+    "\n",
+    "'male'이면서 18세 이상: 'Man'\n",
+    "\n",
+    "'female'이면서 18세 이상: 'Woman' \n",
+    "\n",
+    "가장 많은 인원수를 차지하는 'AgeSexGroup'의 이름을 출력하시오."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "942b941f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AgeSexGroup\n",
+      "Man      519\n",
+      "Woman    259\n",
+      "Boy       58\n",
+      "Girl      55\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 결측값 처리\n",
+    "age_fill_values = df.groupby('Pclass')['Age'].transform('median')\n",
+    "df['Age'] = df['Age'].fillna(age_fill_values)\n",
+    "\n",
+    "# 5번 문제\n",
+    "df['AgeSexGroup'] = 'Unknown'\n",
+    "\n",
+    "df.loc[(df['Sex']=='male') & (df['Age'] < 18), 'AgeSexGroup'] = 'Boy'\n",
+    "df.loc[(df['Sex']=='female') & (df['Age'] < 18), 'AgeSexGroup'] = 'Girl'\n",
+    "df.loc[(df['Sex']=='male') & (df['Age'] >= 18), 'AgeSexGroup'] = 'Man'\n",
+    "df.loc[(df['Sex']=='female') & (df['Age'] >= 18), 'AgeSexGroup'] = 'Woman'\n",
+    "\n",
+    "result = df['AgeSexGroup'].value_counts()\n",
+    "print(result)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c0fc0a1",
+   "metadata": {},
+   "source": [
+    "💻 문제 6. (Pivot Table 및 .loc) (10번 문제의 Age 결측값 처리, 12번 문제의 Deck('U' 포함) 처리가 완료되었다고 가정합니다.) pivot_table을 사용하여 'Deck'을 index로, 'Pclass'를 columns로, Age의 평균을 values로 하는 피벗 테이블을 생성합니다. 생성된 피벗 테이블에서, 'U' (Unknown) 데크의 3등석(Pclass=3) 승객 평균 나이를 소수점 셋째 자리에서 반올림하여 둘째 자리까지 출력하시오."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "e081ba93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24.91\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 결측값 처리\n",
+    "df['Deck'] = df['Cabin'].fillna('U').str[0]\n",
+    "\n",
+    "# 6번 문제\n",
+    "pivot_df = df.pivot_table(index='Deck', columns='Pclass', values='Age', aggfunc='mean')\n",
+    "\n",
+    "print(round(pivot_df.loc['U', 3], 2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71a1ed47",
+   "metadata": {},
+   "source": [
+    "### 💻 제2유형: 데이터 모형 구축\n",
+    "타이타닉 생존자 예측\n",
+    "[훈련 데이터(train.csv)로 학습한 모델을 테스트 데이터(test.csv)에 적용하여 예측한 결과를 제출하시오.\n",
+    "\n",
+    "Target: Survived (생존 여부, 이진 분류, {0, 1})\n",
+    "\n",
+    "제출형식: result.csv\n",
+    "\n",
+    "ID, pred 칼럼만 존재해야 합니다.\n",
+    "\n",
+    "(주의: test.csv의 PassengerId를 ID 칼럼으로 사용해야 함)\n",
+    "\n",
+    "평가지표: Accuracy (정확도) ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2de8617a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 418 entries, 0 to 417\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   PassengerId  418 non-null    int64  \n",
+      " 1   Pclass       418 non-null    int64  \n",
+      " 2   Name         418 non-null    object \n",
+      " 3   Sex          418 non-null    object \n",
+      " 4   Age          418 non-null    float64\n",
+      " 5   SibSp        418 non-null    int64  \n",
+      " 6   Parch        418 non-null    int64  \n",
+      " 7   Ticket       418 non-null    object \n",
+      " 8   Fare         418 non-null    float64\n",
+      " 9   Cabin        418 non-null    object \n",
+      " 10  Embarked     418 non-null    object \n",
+      "dtypes: float64(2), int64(4), object(5)\n",
+      "memory usage: 36.1+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_url = \"https://raw.githubusercontent.com/agconti/kaggle-titanic/master/data/train.csv\"\n",
+    "test_url = \"https://raw.githubusercontent.com/agconti/kaggle-titanic/master/data/test.csv\"\n",
+    "\n",
+    "train = pd.read_csv(train_url)\n",
+    "test = pd.read_csv(test_url)\n",
+    "\n",
+    "# 결측치 처리\n",
+    "#print(test.info())\n",
+    "# trian: age, cabin, embarked\n",
+    "# test: age, cabin\n",
+    "\n",
+    "age_fill_values_train = train.groupby('Pclass')['Age'].transform('median')\n",
+    "train['Age'] = train['Age'].fillna(age_fill_values_train)\n",
+    "\n",
+    "age_fill_values_test = test.groupby('Pclass')['Age'].transform('median')\n",
+    "test['Age'] = test['Age'].fillna(age_fill_values_test)\n",
+    "\n",
+    "train['Cabin'] = train['Cabin'].fillna('Unknown')\n",
+    "test['Cabin'] = test['Cabin'].fillna('Unknown')\n",
+    "\n",
+    "fill_embarked = train['Embarked'].mode()[0]\n",
+    "train['Embarked'] = train['Embarked'].fillna(fill_embarked)\n",
+    "\n",
+    "test['Fare'] = test['Fare'].fillna(test['Fare'].mean())\n",
+    "\n",
+    "# 인코딩\n",
+    "#print(test.info())\n",
+    "# train 인코딩: Sex, Cabin\n",
+    "# train 제거: PassengerId, Ticket, Embarked\n",
+    "\n",
+    "X_train = train.drop(['Survived', 'PassengerId', 'Ticket', 'Embarked'], axis=1)\n",
+    "y_train = train['Survived']\n",
+    "\n",
+    "X_test = test.drop(['PassengerId', 'Ticket', 'Embarked'], axis=1)\n",
+    "\n",
+    "cols = ['Sex', 'Cabin']\n",
+    "X_train = pd.get_dummies(X_train, columns=cols)\n",
+    "X_test = pd.get_dummies(X_test, columns=cols)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e884f3cf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
