--- a/Titanic_Deep_Dive._Practice.ipynb
+++ b/Titanic_Deep_Dive._Practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "id": "fd3361a8",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "id": "2cea89e2",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "id": "f765d845",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "id": "0fc74717",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 25,
    "id": "e3977ca8",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sangh\\AppData\\Local\\Temp\\ipykernel_21652\\403286857.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\sangh\\AppData\\Local\\Temp\\ipykernel_12068\\403286857.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "id": "6a449996",
    "metadata": {},
    "outputs": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 27,
    "id": "05905710",
    "metadata": {},
    "outputs": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "id": "942b941f",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 29,
    "id": "e081ba93",
    "metadata": {},
    "outputs": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "2de8617a",
    "metadata": {},
    "outputs": [
@@ -481,25 +481,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 418 entries, 0 to 417\n",
-      "Data columns (total 11 columns):\n",
-      " #   Column       Non-Null Count  Dtype  \n",
-      "---  ------       --------------  -----  \n",
-      " 0   PassengerId  418 non-null    int64  \n",
-      " 1   Pclass       418 non-null    int64  \n",
-      " 2   Name         418 non-null    object \n",
-      " 3   Sex          418 non-null    object \n",
-      " 4   Age          418 non-null    float64\n",
-      " 5   SibSp        418 non-null    int64  \n",
-      " 6   Parch        418 non-null    int64  \n",
-      " 7   Ticket       418 non-null    object \n",
-      " 8   Fare         418 non-null    float64\n",
-      " 9   Cabin        418 non-null    object \n",
-      " 10  Embarked     418 non-null    object \n",
-      "dtypes: float64(2), int64(4), object(5)\n",
-      "memory usage: 36.1+ KB\n",
-      "None\n"
+      "0.771\n",
+      "       ID  pred\n",
+      "0     892     0\n",
+      "1     893     0\n",
+      "2     894     1\n",
+      "3     895     1\n",
+      "4     896     0\n",
+      "..    ...   ...\n",
+      "413  1305     0\n",
+      "414  1306     1\n",
+      "415  1307     0\n",
+      "416  1308     0\n",
+      "417  1309     0\n",
+      "\n",
+      "[418 rows x 2 columns]\n"
      ]
     }
    ],
@@ -515,11 +511,9 @@
     "# trian: age, cabin, embarked\n",
     "# test: age, cabin\n",
     "\n",
-    "age_fill_values_train = train.groupby('Pclass')['Age'].transform('median')\n",
-    "train['Age'] = train['Age'].fillna(age_fill_values_train)\n",
-    "\n",
-    "age_fill_values_test = test.groupby('Pclass')['Age'].transform('median')\n",
-    "test['Age'] = test['Age'].fillna(age_fill_values_test)\n",
+    "age_medians_by_pclass = train.groupby('Pclass')['Age'].median().to_dict()\n",
+    "train['Age'] = train['Age'].fillna(train.groupby('Pclass')['Age'].transform('median'))\n",
+    "test['Age'] = test['Age'].fillna(test['Pclass'].map(age_medians_by_pclass))\n",
     "\n",
     "train['Cabin'] = train['Cabin'].fillna('Unknown')\n",
     "test['Cabin'] = test['Cabin'].fillna('Unknown')\n",
@@ -527,31 +521,93 @@
     "fill_embarked = train['Embarked'].mode()[0]\n",
     "train['Embarked'] = train['Embarked'].fillna(fill_embarked)\n",
     "\n",
-    "test['Fare'] = test['Fare'].fillna(test['Fare'].mean())\n",
+    "fare_mean_train = train['Fare'].mean()\n",
+    "test['Fare'] = test['Fare'].fillna(fare_mean_train)\n",
     "\n",
     "# 인코딩\n",
     "#print(test.info())\n",
     "# train 인코딩: Sex, Cabin\n",
     "# train 제거: PassengerId, Ticket, Embarked\n",
     "\n",
-    "X_train = train.drop(['Survived', 'PassengerId', 'Ticket', 'Embarked'], axis=1)\n",
-    "y_train = train['Survived']\n",
+    "X = train.drop(['Name', 'Survived', 'PassengerId', 'Ticket', 'Embarked'], axis=1)\n",
+    "y = train['Survived']\n",
     "\n",
-    "X_test = test.drop(['PassengerId', 'Ticket', 'Embarked'], axis=1)\n",
+    "X_test = test.drop(['Name', 'PassengerId', 'Ticket', 'Embarked'], axis=1)\n",
+    "\n",
+    "train_len = len(X)\n",
+    "combined_df = pd.concat([X, X_test], axis=0)\n",
     "\n",
     "cols = ['Sex', 'Cabin']\n",
-    "X_train = pd.get_dummies(X_train, columns=cols)\n",
-    "X_test = pd.get_dummies(X_test, columns=cols)\n",
-    "\n"
+    "combined_df_dummies = pd.get_dummies(combined_df, columns=cols)\n",
+    "\n",
+    "X_final = combined_df_dummies.iloc[:train_len]\n",
+    "X_test_final = combined_df_dummies.iloc[train_len:]\n",
+    "\n",
+    "# 값 불일치\n",
+    "#X_train = pd.get_dummies(X_train, columns=cols)\n",
+    "#X_test = pd.get_dummies(X_test, columns=cols)\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "\n",
+    "x_train, x_val, y_train, y_val = train_test_split(X_final, y, test_size=0.2, random_state=42)\n",
+    "model = RandomForestClassifier(random_state=42)\n",
+    "model.fit(x_train, y_train)\n",
+    "pred = model.predict(x_val)\n",
+    "\n",
+    "auc_score = roc_auc_score(y_val, pred)\n",
+    "print(round(auc_score, 3))\n",
+    "\n",
+    "# 전체 데이터 재학습\n",
+    "model = RandomForestClassifier(random_state=42)\n",
+    "# 한번 더 선언? -> 훈련 데이터 100%로 재학습\n",
+    "model.fit(X_final, y)\n",
+    "final_pred = model.predict(X_test_final)\n",
+    "\n",
+    "result = pd.DataFrame({\n",
+    "    'ID': test['PassengerId'],\n",
+    "    'pred': final_pred\n",
+    "})\n",
+    "result.to_csv('result.csv', index=False)\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d85fa14b",
+   "metadata": {},
+   "source": [
+    "### 💻 제3유형: 데이터 모형 평가\n",
+    "\n",
+    "① 1등석과 3등석, 두 집단의 Age 분산에 차이가 있는지를 알아보기 위해 **F-검정(F-test)**을 수행할 때 검정통계량의 값을 구하여라. (단, 분산 계산 시 1등석의 분산을 분자, 3등석의 분산을 분모로 하여 계산한다.)\n",
+    "\n",
+    "【제출 형식】 반올림하여 소수 셋째 자리까지 작성\n",
+    "\n",
+    "② 1번의 F-검정 p-값을 구하여라. 이 p-값을 바탕으로 두 집단의 등분산성 가정을 할 수 있는지 귀무가설과 대립가설에 근거하여 (채점용 답안이 아닌) 자유롭게 서술하시오. (유의수준: 0.05)\n",
+    "\n",
+    "【제출 형식】 (1) p-값 (반올림하여 소수 셋째 자리까지 작성), (2) 서술형 답안\n",
+    "\n",
+    "③ ②번의 결과와 관계없이, 등분산성(equal variance)을 가정하고 두 집단의 Age에 유의미한 차이가 있는지 **독립표본 t-검정(Independent t-test)**을 수행하고 p-값을 구하여라.\n",
+    "\n",
+    "【제출 형식】 반올림하여 소수 셋째 자리까지 작성"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e884f3cf",
+   "id": "9e179caf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#--- 1. 데이터 준비 (필수 선행) ---\n",
+    "train_url = \"https://raw.githubusercontent.com/agconti/kaggle-titanic/master/data/train.csv\"\n",
+    "df = pd.read_csv(train_url)\n",
+    "\n",
+    "# Age 결측값 채우기\n",
+    "age_fill_values = df.groupby('Pclass')['Age'].transform('median')\n",
+    "df['Age'] = df['Age'].fillna(age_fill_values)"
+   ]
   }
  ],
  "metadata": {
