--- a/Titanic_Deep_Dive._Practice.ipynb
+++ b/Titanic_Deep_Dive._Practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "fd3361a8",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "2cea89e2",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "f765d845",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "0fc74717",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "e3977ca8",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sangh\\AppData\\Local\\Temp\\ipykernel_12068\\403286857.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\sangh\\AppData\\Local\\Temp\\ipykernel_1144\\403286857.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "6a449996",
    "metadata": {},
    "outputs": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "05905710",
    "metadata": {},
    "outputs": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "942b941f",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "e081ba93",
    "metadata": {},
    "outputs": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "2de8617a",
    "metadata": {},
    "outputs": [
@@ -595,10 +595,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "9e179caf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.669\n",
+      "0.0\n",
+      "0.0\n"
+     ]
+    }
+   ],
    "source": [
     "#--- 1. 데이터 준비 (필수 선행) ---\n",
     "train_url = \"https://raw.githubusercontent.com/agconti/kaggle-titanic/master/data/train.csv\"\n",
@@ -606,7 +616,25 @@
     "\n",
     "# Age 결측값 채우기\n",
     "age_fill_values = df.groupby('Pclass')['Age'].transform('median')\n",
-    "df['Age'] = df['Age'].fillna(age_fill_values)"
+    "df['Age'] = df['Age'].fillna(age_fill_values)\n",
+    "\n",
+    "group1 = df[df['Pclass']==1]['Age']\n",
+    "group3 = df[df['Pclass']==3]['Age']\n",
+    "\n",
+    "from scipy.stats import f, ttest_ind\n",
+    "import numpy as np\n",
+    "var1 = np.var(group1, ddof=1)\n",
+    "var3 = np.var(group3, ddof=1)\n",
+    "f_stat = var1 / var3\n",
+    "print(round(f_stat, 3))\n",
+    "\n",
+    "dfn = len(group1) - 1\n",
+    "dfd = len(group3) - 1\n",
+    "p_value = 1 - f.cdf(f_stat, dfn=dfn, dfd=dfd)\n",
+    "print(round(p_value, 3))\n",
+    "\n",
+    "t_stat, p_value_ttest = ttest_ind(group1, group3, equal_var=True)\n",
+    "print(round(p_value_ttest, 3))\n"
    ]
   }
  ],
