--- a/Titanic_Deep_Dive._Practice.ipynb
+++ b/Titanic_Deep_Dive._Practice.ipynb
@@ -636,6 +636,54 @@
     "t_stat, p_value_ttest = ttest_ind(group1, group3, equal_var=True)\n",
     "print(round(p_value_ttest, 3))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd753301",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.036\n",
+      "0.159\n",
+      "102.889\n",
+      "0.0\n",
+      "38.14\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "group1 = df[df['Survived']==1]['Age']\n",
+    "group0 = df[df['Survived']==0]['Age']\n",
+    "\n",
+    "from scipy.stats import levene, ttest_ind\n",
+    "\n",
+    "stat, p_levene = levene(group1, group0)\n",
+    "print(round(p_levene, 3))\n",
+    "\n",
+    "t_stat, p_value = ttest_ind(group1, group0, equal_var=True)\n",
+    "print(round(p_value, 3))\n",
+    "\n",
+    "from scipy.stats import chi2_contingency\n",
+    "ct = pd.crosstab(df['Pclass'], df['Survived'])\n",
+    "chi2, p, dof, expected = chi2_contingency(ct)\n",
+    "print(round(chi2, 3))\n",
+    "print(round(p, 4))\n",
+    "\n",
+    "from scipy import stats\n",
+    "group_S = df[df['Embarked']=='S']['Fare']\n",
+    "group_C = df[df['Embarked']=='C']['Fare']\n",
+    "group_Q = df[df['Embarked']=='Q']['Fare']\n",
+    "f_stat, p_anova = stats.f_oneway(group_S, group_C, group_Q)\n",
+    "print(round(f_stat, 3))\n",
+    "print(round(p_anova, 4))\n",
+    "\n",
+    "# 분산분석에 대해 더 자세히 설명, 어떨때 scipy / statsmodels 쓰는지, Tukey에 대해서도 자세히 설명. 마크다운으로.\n"
+   ]
   }
  ],
  "metadata": {
