--- a/Titanic_Deep_Dive._Practice.ipynb
+++ b/Titanic_Deep_Dive._Practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "fd3361a8",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2cea89e2",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f765d845",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "0fc74717",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e3977ca8",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sangh\\AppData\\Local\\Temp\\ipykernel_1144\\403286857.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\sangh\\AppData\\Local\\Temp\\ipykernel_15632\\403286857.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "6a449996",
    "metadata": {},
    "outputs": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "05905710",
    "metadata": {},
    "outputs": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "942b941f",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "e081ba93",
    "metadata": {},
    "outputs": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "2de8617a",
    "metadata": {},
    "outputs": [
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "9e179caf",
    "metadata": {},
    "outputs": [
@@ -638,8 +638,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e8819d1b",
+   "metadata": {},
+   "source": [
+    "알겠습니다. 방금 정리한 통계 개념들을 타이타닉 데이터셋에 적용해보는 실전 문제 3세트를 만들었습니다.\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "### (체험) 제3유형 (풀이용)\n",
+    "\n",
+    "**유형:** 통계 검정 (Python)\n",
+    "\n",
+    "제공된 데이터(train.csv)는 타이타닉 승객 명단입니다. 통계 검정을 수행하기 전, `Age`는 10번 문제와 동일하게 **Pclass별 중앙값으로 결측치를 채웠고**, `Embarked`는 **최빈값('S')으로 결측치를 채웠다**고 가정합니다.\n",
+    "\n",
+    "> **제공 데이터 (`train.csv`)**\n",
+    ">\n",
+    ">   * **Survived:** 생존 여부 (0: 사망, 1: 생존)\n",
+    ">   * **Pclass:** 객실 등급 (1, 2, 3)\n",
+    ">   * **Age:** 나이 (결측값 처리 완료)\n",
+    ">   * **Fare:** 요금\n",
+    ">   * **Embarked:** 탑승 항구 (S, C, Q / 결측값 처리 완료)\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "### 📜 문제 1 (t-검정)\n",
+    "\n",
+    "생존 여부(`Survived`)에 따라 승객의 평균 나이(`Age`)에 유의미한 차이가 있는지 검정하려고 합니다.\n",
+    "\n",
+    "**①** 생존자 그룹(`Survived`=1)과 사망자 그룹(`Survived`=0)의 **등분산성을 Levene 검정**으로 확인하고자 한다. 이때의 **p-값**을 구하시오.\n",
+    "\n",
+    "> **【제출 형식】** 반올림하여 소수 셋째 자리까지 작성\n",
+    "\n",
+    "**②** 1번 문제의 p-값과 관계없이, 두 집단이 **등분산성(equal\\_var=True)을 만족한다고 가정**하고 **독립표본 t-검정**을 수행하였다. 이때의 **p-값**을 구하시오.\n",
+    "\n",
+    "> **【제출 형식】** 반올림하여 소수 셋째 자리까지 작성\n",
+    "\n",
+    "### 📜 문제 2 (카이제곱 검정)\n",
+    "\n",
+    "객실 등급(`Pclass`)과 생존 여부(`Survived`)가 서로 **독립적인지(관련이 없는지)** 검정하려고 합니다.\n",
+    "\n",
+    "**①** `pd.crosstab`을 이용해 교차표를 생성한 뒤, **카이제곱 독립성 검정**을 수행하시오. 이때의 \\*\\*검정통계량($\\chi^2$)\\*\\*을 구하시오.\n",
+    "\n",
+    "> **【제출 형식】** 반올림하여 소수 셋째 자리까지 작성\n",
+    "\n",
+    "**②** 1번 문제에서 수행한 카이제곱 검정의 **p-값**을 구하시오.\n",
+    "\n",
+    "> **【제출 형식】** 반올림하여 소수 넷째 자리까지 작성 (보통 p-값은 더 정밀하게 봅니다)\n",
+    "\n",
+    "### 📜 문제 3 (ANOVA + 사후검정)\n",
+    "\n",
+    "탑승 항구(`Embarked`)별로 승객들이 지불한 요금(`Fare`)의 평균에 유의미한 차이가 있는지 검정하려고 합니다.\n",
+    "\n",
+    "**①** 세 항구(S, C, Q) 간의 평균 `Fare` 차이를 검정하기 위해 \\*\\*일원분산분석(ANOVA)\\*\\*을 수행하였다. 이때의 **F-통계량**을 구하시오.\n",
+    "\n",
+    "> **【제출 형식】** 반올림하여 소수 셋째 자리까지 작성\n",
+    "\n",
+    "**②** 1번 문제에서 수행한 ANOVA 검정의 **p-값**을 구하시오.\n",
+    "\n",
+    "> **【제출 형식】** 반올림하여 소수 넷째 자리까지 작성\n",
+    "\n",
+    "**③** 2번 문제의 p-값이 0.05보다 작아 귀무가설이 기각되었다. **Tukey HSD 사후검정**을 수행하여 'S' 항구와 'C' 항구 간의 `p-adj` (조정된 p-값)을 구하시오.\n",
+    "\n",
+    "> **【제출 형식】** 반올림하여 소수 셋째 자리까지 작성"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "cd753301",
    "metadata": {},
    "outputs": [
