--- a/Titanic_Deep_Dive._Practice.ipynb
+++ b/Titanic_Deep_Dive._Practice.ipynb
@@ -750,6 +750,129 @@
     "\n",
     "# 분산분석에 대해 더 자세히 설명, 어떨때 scipy / statsmodels 쓰는지, Tukey에 대해서도 자세히 설명. 마크다운으로.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6943f4a5",
+   "metadata": {},
+   "source": [
+    "### (체험) 제3유형 (풀이용)\n",
+    "\n",
+    "**유형:** 통계 검정 (Python)\n",
+    "\n",
+    "제공된 데이터(train.csv)는 타이타닉 승객 명단입니다. 통계 검정을 수행하기 전, `Age`는 10번 문제와 동일하게 **Pclass별 중앙값으로 결측치를 채웠고**, `Embarked`는 **최빈값('S')으로 결측치를 채웠다**고 가정합니다.\n",
+    "\n",
+    "> **제공 데이터 (`train.csv`)**\n",
+    ">\n",
+    ">   * **Survived:** 생존 여부 (0: 사망, 1: 생존)\n",
+    ">   * **Pclass:** 객실 등급 (1, 2, 3)\n",
+    ">   * **Age:** 나이 (결측값 처리 완료)\n",
+    ">   * **Fare:** 요금\n",
+    ">   * **Embarked:** 탑승 항구 (S, C, Q / 결측값 처리 완료)\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "### 📜 문제 1 (카이제곱 검정)\n",
+    "\n",
+    "탑승 항구(`Embarked`)와 생존 여부(`Survived`)가 서로 **독립적인지(관련이 없는지)** 검정하려고 합니다.\n",
+    "\n",
+    "**①** `pd.crosstab`을 이용해 교차표를 생성한 뒤, `scipy.stats.chi2_contingency`를 사용하여 \\*\\*카이제곱 검정통계량($\\chi^2$)\\*\\*을 구하시오.\n",
+    "\n",
+    "> **【제출 형식】** 반올림하여 소수 셋째 자리까지 작성\n",
+    "\n",
+    "**②** 1번 문제에서 수행한 카이제곱 검정의 **p-값**을 구하시오.\n",
+    "\n",
+    "> **【제출 형식】** 반올림하여 소수 넷째 자리까지 작성\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "### 📜 문제 2 (ANOVA + 사후검정)\n",
+    "\n",
+    "객실 등급(`Pclass`)별로 승객들이 지불한 요금(`Fare`)의 평균에 유의미한 차이가 있는지 검정하려고 합니다.\n",
+    "\n",
+    "**①** 1, 2, 3등석(`Pclass`) 간의 평균 `Fare` 차이를 검정하기 위해 `scipy.stats.f_oneway`를 사용하여 **F-통계량**을 구하시오.\n",
+    "\n",
+    "> **【제출 형식】** 반올림하여 소수 셋째 자리까지 작성\n",
+    "\n",
+    "**②** 1번 문제에서 수행한 ANOVA 검정의 **p-값**을 구하시오.\n",
+    "\n",
+    "> **【제출 형식】** 반올림하여 소수 넷째 자리까지 작성\n",
+    "\n",
+    "**③** 2번 문제의 p-값이 0.05보다 작아 귀무가설이 기각되었다. **Tukey HSD 사후검정**을 수행하여 '1등석' 그룹과 '2등석' 그룹 간의 `p-adj` (조정된 p-값)을 구하시오.\n",
+    "\n",
+    "> **【제출 형식】** 반올림하여 소수 셋째 자리까지 작성\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "### 📜 문제 3 (t-검정)\n",
+    "\n",
+    "성별(`Sex`)에 따라 승객의 평균 나이(`Age`)에 유의미한 차이가 있는지 검정하려고 합니다.\n",
+    "\n",
+    "**①** 남성(`male`) 그룹과 여성(`female`) 그룹의 **등분산성을 Levene 검정**으로 확인하고자 한다. 이때의 **p-값**을 구하시오.\n",
+    "\n",
+    "> **【제출 형식】** 반올림하여 소수 셋째 자리까지 작성\n",
+    "\n",
+    "**②** 1번 문제의 p-값이 0.05보다 작아 등분산성 가정이 기각되었다. \\*\\*이분산성을 가정 (`equal_var=False`)\\*\\*하고 **독립표본 t-검정**을 수행할 때, **p-값**을 구하시오.\n",
+    "\n",
+    "> **【제출 형식】** 반올림하여 소수 넷째 자리까지 작성\n",
+    "\n",
+    "-----\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3805c95c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.019\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# --- 데이터 준비 (선행 작업) ---\n",
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/agconti/kaggle-titanic/master/data/train.csv\")\n",
+    "\n",
+    "# (Age, Embarked 결측값 처리 - 1, 2, 3유형 공통 가정)\n",
+    "age_fill_values = df.groupby('Pclass')['Age'].transform('median')\n",
+    "df['Age'] = df['Age'].fillna(age_fill_values)\n",
+    "fill_embarked = df['Embarked'].mode()[0]\n",
+    "df['Embarked'] = df['Embarked'].fillna(fill_embarked)\n",
+    "\n",
+    "from scipy import stats\n",
+    "ct = pd.crosstab(df['Embarked'], df['Survived'])\n",
+    "chi2, p_val, dof, expected = stats.chi2_contingency(ct)\n",
+    "#print(round(chi2, 3))\n",
+    "#print(round(p_val, 4))\n",
+    "\n",
+    "from scipy import stats\n",
+    "g1 = df[df['Pclass']==1]['Fare']\n",
+    "g2 = df[df['Pclass']==2]['Fare']\n",
+    "g3 = df[df['Pclass']==3]['Fare']\n",
+    "f_stat, p_val = stats.f_oneway(g1, g2, g3)\n",
+    "#print(round(f_stat, 3))\n",
+    "#print(round(p_val, 4))\n",
+    "\n",
+    "from statsmodels.stats.multicomp import pairwise_tukeyhsd\n",
+    "tukey_result = pairwise_tukeyhsd(endog=df['Fare'], groups=df['Pclass'])\n",
+    "#print(tukey_result)\n",
+    "\n",
+    "from scipy.stats import ttest_ind, levene\n",
+    "gm = df[df['Sex']=='male']['Age']\n",
+    "gf = df[df['Sex']=='female']['Age']\n",
+    "\n",
+    "stat, p_val = levene(gm, gf)\n",
+    "#print(round(p_val, 3))\n",
+    "\n",
+    "t_stat, p_val = ttest_ind(gm, gf, equal_var=True)\n",
+    "print(round(p_val, 3))\n"
+   ]
   }
  ],
  "metadata": {
