--- a/Titanic_Deep_Dive._Practice.ipynb
+++ b/Titanic_Deep_Dive._Practice.ipynb
@@ -246,7 +246,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sangh\\AppData\\Local\\Temp\\ipykernel_15632\\403286857.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\sangh\\AppData\\Local\\Temp\\ipykernel_1804\\403286857.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "3805c95c",
    "metadata": {},
    "outputs": [
@@ -872,6 +872,120 @@
     "\n",
     "t_stat, p_val = ttest_ind(gm, gf, equal_var=True)\n",
     "print(round(p_val, 3))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c7cfed8",
+   "metadata": {},
+   "source": [
+    "### (체험) 제3유형 (풀이용)\n",
+    "\n",
+    "**유형:** 통계 검정 (Python)\n",
+    "\n",
+    "제공된 데이터(train.csv)는 타이타닉 승객 명단입니다. 통계 검정을 수행하기 전, `Age`는 **Pclass별 중앙값으로 결측치를 채웠고**, `Embarked`는 **최빈값('S')으로 결측치를 채웠다**고 가정합니다.\n",
+    "\n",
+    "> **제공 데이터 (`train.csv`)**\n",
+    ">\n",
+    ">   * **Pclass:** 객실 등급 (1, 2, 3)\n",
+    ">   * **Age:** 나이 (결측값 처리 완료)\n",
+    ">   * **Fare:** 요금\n",
+    ">   * **Sex:** 성별 (male, female)\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "### 📜 문제 7 (상관분석)\n",
+    "\n",
+    "승객의 나이(`Age`)와 지불한 요금(`Fare`) 간의 **선형 관계**를 검정하려고 합니다.\n",
+    "\n",
+    "**①** `scipy.stats.pearsonr`를 사용하여 두 변수(`Age`, `Fare`) 간의 \\*\\*피어슨 상관계수(r)\\*\\*를 구하시오. (단, `Age` 또는 `Fare`에 결측값이 있는 행은 `dropna()`로 제거한 후 분석한다.)\n",
+    "\n",
+    "> **【제출 형식】** 반올림하여 소수 셋째 자리까지 작성\n",
+    "\n",
+    "**②** 1번 문제에서 수행한 피어슨 상관분석의 **p-값**을 구하시오.\n",
+    "\n",
+    "> **【제출 형식】** 반올림하여 소수 넷째 자리까지 작성\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "### 📜 문제 8 (단일표본 t-검정)\n",
+    "\n",
+    "과거의 다른 대형 선박 승객들의 평균 나이(`Age`)는 **30세**로 알려져 있었습니다. 타이타닉호 승객들의 평균 나이가 이와 유의미하게 다른지 검정하려고 합니다.\n",
+    "\n",
+    "**①** `scipy.stats.ttest_1samp`를 사용하여 `Age` (결측값 처리 완료)의 평균이 30과 다른지 **단일표본 t-검정**을 수행하였다. 이때의 **t-검정통계량**을 구하시오.\n",
+    "\n",
+    "> **【제출 형식】** 반올림하여 소수 셋째 자리까지 작성\n",
+    "\n",
+    "**②** 1번 문제에서 수행한 단일표본 t-검정의 **p-값**을 구하시오.\n",
+    "\n",
+    "> **【제출 형식】** 반올림하여 소수 넷째 자리까지 작성\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "### 📜 문제 9 (카이제곱 적합도 검정)\n",
+    "\n",
+    "타이타닉호의 성별(`Sex`) 비율이 남성(male) 60%, 여성(female) 40%라는 가설이 맞는지 검정하려고 합니다.\n",
+    "\n",
+    "**①** `train.csv`의 전체 승객(891명) 중 \\*\\*관측된(Observed) 남성과 여성의 빈도수(f\\_obs)\\*\\*를 각각 구하시오.\n",
+    "\n",
+    "> **【제출 형식】** `[남성 인원수, 여성 인원수]` 형태로 작성 (예: `[500, 391]`)\n",
+    "\n",
+    "**②** 1번의 가설(남성 60%, 여성 40%)에 따른 \\*\\*기대 빈도수(f\\_exp)\\*\\*를 구하시오.\n",
+    "\n",
+    "> **【제출 형식】** `[남성 기대값, 여성 기대값]` 형태로 작성 (예: `[534.6, 356.4]`)\n",
+    "\n",
+    "**③** `scipy.stats.chisquare`를 사용하여 **카이제곱 적합도 검정**을 수행하였다. 이때의 **p-값**을 구하시오. (입력: 1번의 관측빈도, 2번의 기대빈도)\n",
+    "\n",
+    "> **【제출 형식】** 반올림하여 소수 넷째 자리까지 작성\n",
+    "\n",
+    "-----\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "57ec8767",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.407\n",
+      "0.0037\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "# --- 데이터 준비 (선행 작업) ---\n",
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/agconti/kaggle-titanic/master/data/train.csv\")\n",
+    "age_fill_values = df.groupby('Pclass')['Age'].transform('median')\n",
+    "df['Age'] = df['Age'].fillna(age_fill_values)\n",
+    "\n",
+    "from scipy.stats import pearsonr\n",
+    "clean_df = df[['Age', 'Fare']].dropna()\n",
+    "corr_stat, p_val = pearsonr(clean_df['Age'], clean_df['Fare'])\n",
+    "#print(round(corr_stat, 3))\n",
+    "#print(round(p_val, 4))\n",
+    "\n",
+    "from scipy.stats import ttest_1samp\n",
+    "t_stat, p_val = ttest_1samp(df['Age'], popmean=30)\n",
+    "#print(round(t_stat, 3))\n",
+    "#print(round(p_val, 4))\n",
+    "\n",
+    "from scipy.stats import chisquare\n",
+    "total_count = len(df)\n",
+    "\n",
+    "obs_count = df['Sex'].value_counts()\n",
+    "f_obs = [obs_count['male'], obs_count['female']]\n",
+    "#print(f_obs)\n",
+    "\n",
+    "f_exp = [total_count * 0.6, total_count * 0.4]\n",
+    "#print(f_exp)\n",
+    "stat, p_val = chisquare(f_obs=f_obs, f_exp=f_exp)\n",
+    "print(round(stat, 3))\n",
+    "print(round(p_val, 4))"
    ]
   }
  ],
