--- a/Test_Practice/Test_Code.ipynb
+++ b/Test_Practice/Test_Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 58,
    "id": "2fa1656e",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 59,
    "id": "88f81e4b",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 60,
    "id": "4ed4de67",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 61,
    "id": "b77e17bf",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 62,
    "id": "aa070290",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 63,
    "id": "a8437069",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "106e157d",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "ce0c4c76",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 66,
    "id": "2e06b990",
    "metadata": {},
    "outputs": [
@@ -295,6 +295,156 @@
     "df['Category'] = df['Price'].apply(get_category)\n",
     "result = len(df[(df['Category']=='Mid') & (df['Product']=='A')])\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "116db132",
+   "metadata": {},
+   "source": [
+    "📝 실전 연습 문제 (Large Data)\n",
+    "문제 1. (시계열 분해 & 집계) Date 컬럼을 이용하여 **2023년의 '월별(Month)' 총 범죄 건수(Violent + Theft + Traffic)**를 집계하시오. 그중 총 범죄 건수가 **가장 많았던 월(Month)**의 범죄 건수 합계를 구하시오. (단, 정수로 출력하시오.)\n",
+    "\n",
+    "문제 2. (복합 연산 & Groupby 주의점) 전체 기간 동안 각 구(District)별로 데이터가 수집되었습니다. **'Zone_A'**의 연간 10만 명당 평균 강력 범죄(Violent) 발생 건수를 구하시오.\n",
+    "\n",
+    "계산 로직: (Zone_A의 전체 Violent 합계 / 데이터 수집 년수) / Zone_A의 인구수 * 100,000\n",
+    "\n",
+    "데이터 수집 년수(Years)는 5년(2020~2024)으로 계산합니다.\n",
+    "\n",
+    "결과값은 소수점 이하는 버리고 **정수(int)**로 출력하시오.\n",
+    "\n",
+    "문제 3. (이상치 탐색 & 조건부 평균) 전체 데이터 중 Traffic 범죄 건수가 상위 1%(quantile(0.99)) 이상인 날들을 **'Traffic_High'**로 정의합니다. 이 'Traffic_High' 그룹에 속하는 데이터들의 Violent 범죄 발생 건수의 평균을 구하시오. (단, 소수점 셋째 자리에서 반올림하여 둘째 자리까지 출력하시오.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "b4ed9a6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "데이터 생성 완료! 크기: (50000, 6)\n",
+      "        Date District  Violent  Theft  Traffic  Population\n",
+      "0 2020-01-01   Zone_N        6     21       21      662347\n",
+      "1 2020-01-01   Zone_A       10      3       44      732104\n",
+      "2 2020-01-01   Zone_N        4      8       38      662347\n",
+      "3 2020-01-01   Zone_E       12      0       47      654593\n",
+      "4 2020-01-01   Zone_K       13      5       35      474799\n",
+      "5 2020-01-01   Zone_H        9      5       37      721696\n",
+      "6 2020-01-01   Zone_D        0      7       20      661246\n",
+      "7 2020-01-01   Zone_G       14      5       41      486794\n",
+      "8 2020-01-01   Zone_O       11     28       41      466331\n",
+      "9 2020-01-01   Zone_S        1     10        9      253094\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# 랜덤 시드 고정 (정답 통일을 위해)\n",
+    "np.random.seed(2024)\n",
+    "\n",
+    "# 1. 기본 설정\n",
+    "n_rows = 50000\n",
+    "districts = [f'Zone_{chr(i)}' for i in range(65, 85)] # Zone_A ~ Zone_T (20개)\n",
+    "\n",
+    "# 2. 구별 인구수 매핑 (Zone_A는 30만, Zone_B는 35만... 랜덤 배정)\n",
+    "pop_map = {d: np.random.randint(200000, 800000) for d in districts}\n",
+    "\n",
+    "# 3. 데이터 생성\n",
+    "df = pd.DataFrame({\n",
+    "    'Date': np.random.choice(pd.date_range('2020-01-01', '2024-12-31'), n_rows),\n",
+    "    'District': np.random.choice(districts, n_rows),\n",
+    "    'Violent': np.random.randint(0, 15, n_rows),  # 일일 발생 건수라 적게 설정\n",
+    "    'Theft': np.random.randint(0, 30, n_rows),\n",
+    "    'Traffic': np.random.randint(0, 50, n_rows)\n",
+    "})\n",
+    "\n",
+    "# 4. 인구수 매핑 및 정렬\n",
+    "df['Population'] = df['District'].map(pop_map)\n",
+    "df = df.sort_values('Date').reset_index(drop=True)\n",
+    "\n",
+    "print(f\"데이터 생성 완료! 크기: {df.shape}\")\n",
+    "print(df.head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "cf932e6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "41536\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 1\n",
+    "df['Date'] = pd.to_datetime(df['Date'])\n",
+    "df['year'] = df['Date'].dt.year\n",
+    "df['month'] = df['Date'].dt.month\n",
+    "\n",
+    "df['Total'] = df['Violent'] + df['Theft'] + df['Traffic']\n",
+    "q1 = df[df['year']==2023]\n",
+    "result = q1.groupby('month')['Total'].sum().sort_values(ascending=False)\n",
+    "print(result.iloc[0])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "ba7f3002",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "479\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 2\n",
+    "q2 = df[df['District']=='Zone_A']\n",
+    "year_ratio = (q2['Violent'].sum() / 5) / q2['Population'].iloc[0] * 100000\n",
+    "print(int(year_ratio))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "1ef011f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.94\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 3\n",
+    "var = df['Traffic'].quantile(0.99)\n",
+    "def cond(traffic):\n",
+    "    if traffic >= var: return 'Traffic_High'\n",
+    "    else: return 'NoNan'\n",
+    "\n",
+    "df['Traffic_check'] = df['Traffic'].apply(cond)\n",
+    "\n",
+    "result = df[df['Traffic_check']=='Traffic_High']['Violent'].mean()\n",
+    "print(round(result, 2))"
    ]
   }
  ],
